# pyramidi

./: .gitignore  CONTRIBUTORS.md  README.md  pyproject.toml  setup.py
pyramidi/: __init__.py  analysis.py  core.py  manipulate.py  sdc.py  tools.py
pyramidi/cli/: manipulateMIDI.py
pyramidi/models/: Krumhansl_Schmuckler.py  PitchSalience.py  Woolhouse.py  __init__.py  roughness.py  temp  weights.csv
tests/: test.mid  test2.mid
