[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyramidi"
version = "0.0.1"
authors = [
  { name="Konrad Swierczek", email="swierckj@mcmaster.ca" },
]
description = "A package for processing, manipulating, and analyzing MIDI files using Mido."
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
  "pandas > 2.0.0",
  "scipy > 1.10.1",
  "mido > 1.3.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL3",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/konradswierczek/pyramidi"
Issues = "https://github.com/konradswierczek/pyramidi/issues"
